# codex-auth-manager

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.Codex/: context-summary-pr11-merge-release.md  context-summary-switch-tools.md  context-summary-快速登录导入.md  operations-log.md  verification-report.md
.github/workflows/: release.yml  windows-build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py
src-tauri/src/: lib.rs
src/components/: AccountCard.tsx  AddAccountModal.tsx  CloseBehaviorDialog.tsx  ConfirmDialog.tsx  EmptyState.tsx  Header.tsx  QuickLoginModal.tsx  SettingsModal.tsx  StatsSummary.tsx  SwitchRestartDialog.tsx  UsageBar.tsx  index.ts
src/hooks/: useAutoRefresh.ts
src/stores/: useAccountStore.ts
src/types/: index.ts
src/utils/: codexEnv.ts  jwt.ts  statusParser.ts  storage.ts
